--- a/RatRNNWithNoise.ipynb
+++ b/RatRNNWithNoise.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -47,20 +49,25 @@
     "learning_rate = 1e-4\n",
     "weights_regularization = 0.2\n",
     "act_regularization = 0.2\n",
-    "hidden_units = 100\n",
+    "hidden_units = 128\n",
     "train_steps = 10000\n",
     "ep_length = 500\n",
     "sim_steps = 1000000\n",
-    "batch_size = 500\n",
+    "batch_size = 512\n",
     "\n",
     "tau = 10.0\n",
     "noise_stddev = 0.5\n",
     "zero_speed_probability = 0.5\n",
     "\n",
-    "#x_size = 2#5\n",
+    "# [rotation.y, velocity.x, velocity.z, angularVelocity.y, velocity.magnitude, heading, velocity]\n",
+    "x_components = [0, 4]\n",
+    "\n",
+    "unity_params = {\n",
+    "    'start_area_extents': 8.0,\n",
+    "    'ep_length': ep_length}\n",
     "\n",
     "model_path = 'rat_model_rnn'\n",
-    "data_path = 'rat_data_large'"
+    "data_path = 'rat_data_large_rnd'"
    ]
   },
   {
@@ -111,7 +118,7 @@
    "source": [
     "x,z,ep = [], [], []\n",
     "input_x = []\n",
-    "a = env.reset()[default_brain]\n",
+    "a = env.reset(config=unity_params)[default_brain]\n",
     "for i in range(sim_steps - 1):\n",
     "    \n",
     "    # check for NANs\n",
@@ -136,7 +143,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = np.array(x)\n",
@@ -155,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if not os.path.exists(data_path):\n",
@@ -176,6 +187,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -195,9 +207,8 @@
    "source": [
     "# [rotation.y, velocity.x, velocity.z, angularVelocity.y, velocity.magnitude, heading, velocity]\n",
     "print(np.shape(input_x))\n",
-    "input_x = input_x[:, [0,4]] # rotation and velocity\n",
+    "input_x = input_x[:, x_components] # rotation and velocity\n",
     "input_x[:,-1] /= np.max(abs(input_x[:,-1]))\n",
-    "x_size = 2\n",
     "print(np.shape(input_x))"
    ]
   },
@@ -239,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_colors(length, segments):\n",
@@ -302,7 +315,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class MyBasicLSTMCell(tf.contrib.rnn.RNNCell):\n",
@@ -384,7 +399,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class RatRNN(object):\n",
@@ -428,11 +445,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
-    "rat_rnn = RatRNN(x_size, 2, hidden_units, batch_size, learning_rate)\n",
+    "rat_rnn = RatRNN(len(x_components), 2, hidden_units, batch_size, learning_rate)\n",
     "sess = tf.InteractiveSession()\n",
     "saver = tf.train.Saver()\n",
     "\n",
@@ -450,6 +469,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -481,7 +501,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in range(train_steps):\n",
@@ -492,7 +514,7 @@
     "    batch_x[:,-1] *= np.random.choice(a=[0.0, 1.0], size=(len(batch_x[:,-1])),\n",
     "                                      p=[zero_speed_probability, 1-zero_speed_probability])\n",
     "    \n",
-    "    feed_dict = {rat_rnn.x: np.reshape(batch_x, [-1,x_size]), rat_rnn.y: np.reshape(batch_y, [-1, 2]), \n",
+    "    feed_dict = {rat_rnn.x: np.reshape(batch_x, [-1,len(x_components)]), rat_rnn.y: np.reshape(batch_y, [-1, 2]), \n",
     "                 rat_rnn.train_length: [ep_length], rat_rnn.noise_stddev: [noise_stddev] }\n",
     "    loss, _ = sess.run([rat_rnn.loss, rat_rnn.update], feed_dict=feed_dict)\n",
     "    if i % 100 == 0 and i != 0:\n",
@@ -504,7 +526,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "learning_rate *= .5\n",
@@ -515,7 +539,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.plot(losses)"
@@ -531,7 +557,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if not os.path.exists(model_path):\n",
@@ -550,7 +578,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ckpt = tf.train.get_checkpoint_state(model_path)\n",
@@ -571,6 +601,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -581,7 +612,7 @@
     "    batch_x = input_x[pointer*ep_length:(pointer+batch_size)*ep_length]\n",
     "    batch_y = input_Y[pointer*ep_length:(pointer+batch_size)*ep_length]\n",
     "\n",
-    "    feed_dict = {rat_rnn.x: np.reshape(batch_x, [-1,x_size]), \n",
+    "    feed_dict = {rat_rnn.x: np.reshape(batch_x, [-1,len(x_components)]), \n",
     "                 rat_rnn.train_length: [ep_length], rat_rnn.noise_stddev: [1*noise_stddev]}\n",
     "    yp = sess.run(rat_rnn.y_pred, feed_dict=feed_dict) + batch_y[0]\n",
     "    \n",
@@ -608,6 +639,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -619,7 +651,7 @@
     "    pointer = i\n",
     "    batch_x = input_x[pointer*ep_length*batch_size:(pointer+1)*ep_length*batch_size]\n",
     "    batch_y = input_y[pointer*ep_length*batch_size:(pointer+1)*ep_length*batch_size]\n",
-    "    feed_dict = {rat_rnn.x: np.reshape(batch_x, [-1,x_size]), \n",
+    "    feed_dict = {rat_rnn.x: np.reshape(batch_x, [-1,len(x_components)]), \n",
     "                 rat_rnn.train_length: [ep_length], rat_rnn.noise_stddev: [0*noise_stddev]}\n",
     "    act = sess.run(rat_rnn.output, feed_dict=feed_dict)\n",
     "    \n",
@@ -638,13 +670,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "            \n",
     "plt.figure(figsize=(15,30))\n",
     "for h in range(hidden_units):\n",
-    "    plt.subplot(hidden_units//8+1, 8, 1 + h)\n",
+    "    plt.subplot(hidden_units//8, 8, 1 + h)\n",
     "    plt.title('Neuron ' + str(h))\n",
     "    plt.imshow(rate[h,:,:] / np.max(rate[h,:,:]), interpolation=\"nearest\", cmap=\"plasma\")\n",
     "    plt.axis('off')\n",
@@ -662,7 +696,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sess.close()\n",
@@ -672,7 +708,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(input_Y)\n",
@@ -682,24 +720,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(15,30))\n",
-    "for h in range(hidden_units):\n",
-    "    plt.subplot(hidden_units//8, 8, 1 + h)\n",
-    "    plt.title('Neuron ' + str(h))\n",
-    "    #plt.imshow(rate[h,:,:] / np.max(rate[h,:,:]), interpolation=\"nearest\", cmap=\"plasma\")\n",
-    "    plt.imshow(np.minimum(rate[h,:,:], np.max(rate[h,:,:]) * .5), interpolation=\"nearest\", cmap=\"plasma\")\n",
-    "    plt.axis('off')\n",
-    "    \n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -721,7 +744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
